# gfr

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  gfr_layer.py
layergen/: BUILD  layergen_utils.py
layergen/templates/: command.cc.inc.jinja2  command.h.inc.jinja2  command_common.cc.jinja2  command_common.h.jinja2  command_printer.cc.jinja2  command_printer.h.jinja2  command_recorder.cc.jinja2  command_recorder.h.jinja2  command_tracker.cc.jinja2  command_tracker.h.jinja2  dispatch.cc.jinja2  dispatch.h.jinja2  gfr_commands.cc.inc.jinja2  gfr_commands.h.inc.jinja2  gfr_intercepts.cc.inc.jinja2  layer_base.cc.jinja2  layer_base.h.jinja2  manifest.json.jinja2  vulkan_macros.jinja2
manifest/linux/: gfr.json
manifest/windows/: gfr.json
scripts/: generate_layer.sh
src/: CMakeLists.txt  bind_sparse_utils.cc  bind_sparse_utils.h  command.cc  command.h  command_buffer_tracker.cc  command_buffer_tracker.h  command_pool.cc  command_pool.h  descriptor_set.cc  descriptor_set.h  device.cc  device.h  gfr.cc  gfr.h  gfr_log_format.yaml  linear_allocator.h  logger.h  marker.h  object_name_db.cc  object_name_db.h  pipeline.cc  pipeline.h  semaphore_tracker.cc  semaphore_tracker.h  shader_module.cc  shader_module.h  spirv_parse.h  submit_tracker.cc  submit_tracker.h  util.cc  util.h
templates/: GFR.cc.tmpl  command_recorder.cc.tmpl  cpp_common.tmpl  defaults.tmpl  generate_layer.sh  layer.cc.tmpl
